[Pipe] Fix omitted legacy tablet compatibility follow-ups (#17929)